Update overview layout to fixed table details
In order to have control over what details should render, pick
out the specific ones instead of looping through all of them.

Remove border on header and instead have a slightly different
color of overview in order for it to not look too barren. Also
setting a smaller max widht on the content helps in cases where
there are few details.

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,4 +17,10 @@
     font-size: 0.875rem /* 14px */;
     line-height: 1.25rem /* 20px */;
   }
+  tr {
+    border-bottom: 1px solid rgba(63, 63, 70);
+  }
+  td {
+    padding: 0.5rem;
+  }
 }
